css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');





.navbar-brand img{
    width: 250px;
    height: 39px;
}
.navbar-toggler{
    background-color: #16201b;
    border: none !important;
    padding: 8px 12px;
}

.navbar-toggler-icon{
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2.5' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}
.cta-button {
    position: relative;
    overflow: hidden;
    z-index: 1;

    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-size: 16px;

    padding: 10px 15px;
    background-color: #D4AF37;
    color: #000;
    border: none;
    border-radius: 34px;
    cursor: pointer;

    transition: color 0.4s ease;
}

.cta-button::before {
    content: "";
    position: absolute;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100%;
    background: #b8941f; /* Darker gold */
    transition: left 0.4s ease;
    z-index: -1;
}

.cta-button:hover::before {
    left: 0;
}

.cta-button:hover {
    color: #fff;
}
.navbar .nav-link{
    position: relative;
    display: inline-block;
    color: #fff;
    text-decoration: none;
}

.navbar .nav-link::after{
    content: "";
    position: absolute;
    left: 0;
    bottom: -5px;
    width: 0;
    height: 2px;
    background: #fff; 
    transition: width 0.3s ease;
}

.navbar .nav-link:hover::after{
    width: 100%;
}
.navbar .nav-link.active::after{
    width: 100%;
}
/* Preloader */
#preloader{
    position: fixed;
    top:0;
    left:0;
    width:100%;
    height:100%;
    background:#ffffff;
    display:flex;
    justify-content:center;
    align-items:center;
    z-index:999999;
}

/* Spinner */
.loader{
    width:60px;
    height:60px;
    border:6px solid #ddd;
    border-top:6px solid #ffb400;
    border-radius:50%;
    animation:spin 1s linear infinite;
}

@keyframes spin{
    100%{
        transform:rotate(360deg);
    }
}
.hero{
    padding-top: 58px;
    padding-bottom: 100px;
    background-image: url("../images/hero image bg.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 100%;
    height: 561px;
    width: 100%;
}
.brands{
    padding-top: 100px;
    padding-bottom: 100px;
    background-color: #000;
}
.herotxt{
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 800;
  font-style: normal;
    line-height: 100%;
    font-size: 78px;
}
.herop{
    font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
    font-size: 22px;
    line-height: 150%;
}
.text-div{
    max-width:866px;
    margin:auto;
    text-align:center;
}
.heropt{
    max-width: 740px;
    margin: auto;
    text-align: center;
}
.submitbtn {
    position: relative;
    overflow: hidden;
    z-index: 1;

    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-size: 15px;

    padding: 10px 30px;
    border-radius: 34px;
    background-color: #D4AF37;
    width: 362px;
    height: 50px;
    border: none;
    cursor: pointer;

    transition: color .4s ease;
}

.submitbtn::before {
    content: "";
    position: absolute;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100%;
    background: #b8941f;
    transition: left .4s ease;
    z-index: -1;
}

.submitbtn:hover::before {
    left: 0;
}

.submitbtn:hover {
    color: white;
}

.about{
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #2D2D2D;
    opacity:100%;

}
.about-divider{
    width: 1619px;
    max-width: 90%;
    height: 1px;
    background: rgba(255,255,255,0.5);
    margin: 0 auto;
}

.about-bg{
    position: relative;
    background-image: url("../images/about.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 100%;
     aspect-ratio: 919 / 663;
}
.about-bg::after{
    content:"";
    position:absolute;
    inset:0;

    background:linear-gradient(
        to right,
        rgba(0,0,0,.10),
        rgba(0,0,0,.55),
        #2D2D2D
    );
}

.about-txt{
    font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
    font-size: 30px;
    color: #FFD700;
    text-align: start;
}
.about-box{
    display: flex;
    flex-direction: column;
    justify-content: center;
    
    
    
}
.about p{
     font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 800;
  font-style: normal;
    font-size: 46px;
    line-height: 120%;
    color: #fff;
}
.smmp{
    font-family: "Montserrat", sans-serif;
  font-weight: 400 !important;
  font-style: normal;
    font-size: 18px !important;
    line-height: 150% !important;
    color: #FFFFFF;
}
.smsp{
    font-weight:bold;
}

.underabout{
    background-color: #2D2D2D;
}
.founder-para{
    font-family:"Montserrat",sans-serif;
    font-size:20px;
    font-weight: 400;
    line-height:150%;
    color:#d6d6d6;
    
}
.founder-para-div{
     max-width:715px;
     height: 115px;
    margin:auto;
    text-align:start;
}
.founder-para-new{
     max-width:715px;
     height: 115px;
    margin:auto;
    text-align:start;
}
.founder-para-end{
    max-width: 715px;
    margin:auto;
    text-align: start;
    height: 80px;
}

.founder-para strong{
    color:#fff;
    font-weight:600;
    font-size: 17px;
}

.founder-heading{
    font-family:"Montserrat",sans-serif;
    font-size:18px;
    font-weight:600;
    line-height: 150%;
    color:#fff;
    margin-bottom:19px;
    margin-top: 52px;
}

.founder-list{
    list-style:none;
    padding:0;
    margin:0;
}
/* ... */

